--- a/Bao/switchWithInput.html
+++ b/Bao/switchWithInput.html
@@ -29,8 +29,17 @@
                 case age >= 14 && age <= 18:
                     response = "Konrad... behave yourself!";
                     break;
-                case age >= 19 && age <= 30:
+                case age >= 19 && age <= 25:
                     response = "Don't worry, he's a good guy!";
+                    break;
+                case age >= 26 && age <= 35:
+                    response = "Oh... is that wrinkle there? Do you maybe have a younger sister?";
+                    break;
+                case age >= 36 && age <= 45:
+                    response = "You're older than him, that's against the laws of physics!";
+                    break;
+                case age >= 46 && age <= Infinity:
+                    response = "Do you perhaps need elderly care? He has experience in that!";
                     break;
             };
 
