--- a/Bao/switchWithInput.html
+++ b/Bao/switchWithInput.html
@@ -23,6 +23,7 @@
             let age = parseInt(document.getElementById("age").value);
 
             switch (true) {
+                case
                 case age >= 1 && age <= 13:
                     response = "Hey kid, where's your mommy?";
                     break;
@@ -39,7 +40,7 @@
                     response = "You're older than him, that's against the laws of physics!";
                     break;
                 case age >= 46 && age <= Infinity:
-                    response = "Do you perhaps need elderly care? He has experience in that!";
+                    response = "You look old & wealthy, hmm...";
                     break;
             };
 
