fetch-verse and async.js

--- a/Bao/to-do-app/frontend/index.html
+++ b/Bao/to-do-app/frontend/index.html
@@ -6,13 +6,14 @@
 <body>
 
   <h1>My to-do app</h1>
+  
   <input type="text" id="new-task" placeholder="Add a new task...">
-
   
   <button onclick="addItem()" id="add-btn">Add</button>
 
   <ul id="task-list"></ul>
 
+  <p id="message">I hope you like the app!</p>
   <script type="module" src="main.js"></script>
 </body>
 </html>
