--- a/Bao/website/frontend/welcome.html
+++ b/Bao/website/frontend/welcome.html
@@ -12,6 +12,18 @@
   
   <main>
     <h1>Welcome</h1>
+
+    <p>
+      With this project, I've learned the following, so far:
+    </p>
+
+    <ul>
+      <li>🤩 That CSS is annoying</li>
+      <li>🤩 Using dedicated files for different aspects to maintain good code overview</li>
+      <li>🤩 Separate nav code that is automatically injected into all pages</li>
+      <li>🤩 Using separate mongodb collections with different routes</li>
+      <li>🤩 
+    </ul>
   </main>
     
   <script type="module" src="main.js"></script>
