--- a/Bao/website/frontend/welcome.html
+++ b/Bao/website/frontend/welcome.html
@@ -22,7 +22,7 @@
       <li>🤩 Using dedicated files for different aspects to maintain good code overview</li>
       <li>🤩 Separate nav code that is automatically injected into all pages</li>
       <li>🤩 Using separate mongodb collections with different routes</li>
-      <li>🤩 
+      <li>🤩 ... and more</li>
     </ul>
   </main>
     
