--- a/Bao/website/frontend/task-list.html
+++ b/Bao/website/frontend/task-list.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Task list</title>
+  <title>Task List</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,7 +11,7 @@
   <div id="nav-placeholder"></div>
   
   <main>
-    <h1>Task list</h1>
+    <h1>Task List</h1>
 
     <div>
       <input type="text" id="task-input" placeholder="Add a new task...">
